# FitSocial

./: .gitignore  DevDoc.md  README.md  UserDoc.md  package-lock.json
backend/: Cargo.toml  test.http
backend/dev.db/: 000008.sst  000045.sst  000095.sst  000098.sst  IDENTITY  LOG  LOG.old.1675896702746509  LOG.old.1675900100793687  LOG.old.1675901554988278  LOG.old.1675911891562983  LOG.old.1675980736915526  LOG.old.1676008194785881  LOG.old.1676011885805746  LOG.old.1676012485889141  LOG.old.1676063751395899  LOG.old.1676336316702545  LOG.old.1676342898011492  LOG.old.1676345543809467  LOG.old.1676357002521764  LOG.old.1677487512598500  LOG.old.1677487662742508  LOG.old.1677487758651107  LOG.old.1677487877531564  LOG.old.1677641431078955  LOG.old.1677783565986760  LOG.old.1677810428928201  LOG.old.1677869285821431  LOG.old.1677869422726768  LOG.old.1677871041371027  LOG.old.1677905311999283  LOG.old.1677905707298862  LOG.old.1677957761274206  LOG.old.1677957998246492  LOG.old.1677980677551170  LOG.old.1678052191805581  LOG.old.1678052429917889  LOG.old.1678052532724585  LOG.old.1678237071988007  LOG.old.1678239347747561  MANIFEST-000010  (+7 more)
backend/src/: .main.rs.swp  error.rs  main.rs  prelude.rs  settings.rs
backend/src/dev.db/: IDENTITY  LOG  LOG.old.1677533083753726
backend/src/model/: mod.rs  stats.rs  users.rs  widgets.rs
backend/src/server/: fairings.rs  mod.rs  routes.rs  settings.rs
backend/src/store/: mod.rs  try_froms.rs  try_takes.rs  upload.rs
backend/src/utils/: mod.rs
docs/: architecture_and_design.md  living_document.md  (+1 more)
frontend/: App.tsx  (+5 more)
(+56 files in other folders)
