[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2"}
rocket_cors = "0.5.2"
local-ip-address = "0.5.1"
surrealdb = "1.0.0-beta.8"
serde = "1.0.152"
ts-rs = { version = "6" }
serde_with = "2.2.0"
thiserror = "1.0.38"
maplit = "1.0.2"
tokio = { version = "1.24.2", features = ['full']}